Barrierefreiheit 1: Fix contrast for search letter list.
 should be 949494 instead of 999999.

--- a/source/assets/css/content/_search.scss
+++ b/source/assets/css/content/_search.scss
@@ -355,11 +355,12 @@ a.search__cat-title {
 		height: 50px;
 		line-height: 50px;
 
-		color: $customScrollbarColor;
+		color: $colorMittleresGrau;
 
 		text-decoration: none;
 
-		&:hover {
+		&:hover,
+		&:focus {
 			background-color: rgba($colorLightGray, 0.5);
 			color: $colorBlack;
 		}
